--- a/source/Fasciculus.Eve/Pages/MarketPage.xaml
+++ b/source/Fasciculus.Eve/Pages/MarketPage.xaml
@@ -69,6 +69,7 @@
                     <ProgressBar Progress="{Binding Progress, Converter={StaticResource lpi}}"
                                  ProgressColor="{Binding Progress, Converter={StaticResource lpi}}"
                                  BackgroundColor="LightGray" MinimumHeightRequest="8"
+                                 WidthRequest="480"
                                  Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2" />
                 </Grid>
             </VerticalStackLayout>
