--- a/source/Fasciculus.Eve/Pages/MarketPage.xaml
+++ b/source/Fasciculus.Eve/Pages/MarketPage.xaml
@@ -77,15 +77,20 @@
                     <Label Text="Sell @" HorizontalOptions="End" Grid.Column="4" />
                     <Label Text="Profit" HorizontalOptions="End" Grid.Column="5" />
                 </Grid>
-                <ListView ItemsSource="{Binding Trades}">
-                    <ListView.ItemTemplate>
+                <CollectionView ItemsSource="{Binding Trades}">
+                    <CollectionView.ItemTemplate>
                         <DataTemplate x:DataType="models:EveTrade">
-                            <ViewCell>
-                                <eveControls:Trade BindingContext="{Binding .}" />
-                            </ViewCell>
+                            <Grid RowDefinitions="Auto" ColumnDefinitions="480,320,120,120,120,120">
+                                <Label Text="{Binding Supply.Station.FullName}" Grid.Column="0" />
+                                <Label Text="{Binding Supply.Type.Name}" Grid.Column="1" />
+                                <Label Text="{Binding QuantityText}" HorizontalOptions="End" Grid.Column="2" />
+                                <Label Text="{Binding BuyPriceText}" HorizontalOptions="End" Grid.Column="3" />
+                                <Label Text="{Binding SellPriceText}" HorizontalOptions="End" Grid.Column="4" />
+                                <Label Text="{Binding ProfitText}" HorizontalOptions="End" Grid.Column="5" />
+                            </Grid>
                         </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
+                    </CollectionView.ItemTemplate>
+                </CollectionView>
             </VerticalStackLayout>
         </HorizontalStackLayout>
     </ScrollView>
